--- a/kongu.html
+++ b/kongu.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <h1>KONGU ENGINEERING COLLEGE</h1>
-    <h3>EIT</h3>
+    <h3>Essentials of Information Technology</h3>
     <p>poornima</p>
     <p>23ALR065</p>
 </head>
