--- a/kongu.html
+++ b/kongu.html
@@ -2,7 +2,7 @@
 <head>
     <h1>KONGU ENGINEERING COLLEGE</h1>
     <h3>Essentials of Information Technology</h3>
-    <p>poornima</p>
+    <p>Poornima</p>
     <p>23ALR065</p>
 </head>
 </html>
